--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>Tetris</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <div id="title">
+    <h1>Tetris 2020</h1>
+  </div>
   <div id="score"></div>
   <canvas id="tetris" width="240"height="400"></canvas>
   <script src="tetris.js"></script>
