--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Tetris 2020</h1>
   </div>
   <div id="score"></div>
+  <div id="highScore"></div>
   <canvas id="tetris" width="240"height="400"></canvas>
   <script src="tetris.js"></script>
 </body>
